--- a/css/style.css
+++ b/css/style.css
@@ -1,119 +1,150 @@
-@import url('https://fonts.googleapis.com/css2?family=Arimo:ital@1&family=Roboto:wght@300&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Arimo:ital@1&family=Be+Vietnam+Pro:wght@400;500;700&family=Inter:wght@400;500;700&family=Roboto:wght@400;500;700&display=swap");
 * {
-    font-family: 'Roboto', sans-serif;
-    ;
+  margin: 0;
+  padding: 0;
+  font-family: "Roboto", sans-serif;
 }
 
 body {
-    background-color: #e4e2e2;
-    margin: 0;
-    padding: 0;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(130px, 1fr));
+  height: 100vh;
 }
-
-header {
+body header, body footer {
+  grid-column: 1/-1;
+  background-color: rgb(34, 34, 34);
+  color: #fff;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.2rem 2rem;
+}
+body header div img, body footer div img {
+  width: 50px;
+}
+body header nav ul, body footer nav ul {
+  list-style: none;
+}
+body header nav ul li, body footer nav ul li {
+  cursor: pointer;
+}
+body header h1 {
+  font-size: 25px;
+}
+body header h1 span.verde {
+  color: rgb(1, 130, 1);
+}
+body header h1 span.rojo {
+  color: #f00;
+}
+body header nav {
+  position: relative;
+}
+@media (min-width: 768px) {
+  body header nav {
+    width: 40%;
+  }
+  body header nav label {
+    display: none;
+  }
+  body header nav #checkNav:not(:checked) + ul {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #222222;
-    width: 100%;
-    height: 100px;
-    box-sizing: border-box;
-    padding: 30px;
-    margin-bottom: 2rem;
-}
-
-nav {
-    display: flex;
-    width: 400px;
-    justify-content: space-around;
-}
-
-nav a {
-    color: white;
-    text-decoration: none;
-}
-
-.banner {
-    display: inline-flex;
-    width: 100%;
-    flex-wrap: wrap;
-    min-height: 400px;
-    justify-content: center;
-}
-
-.mensaje {
-    width: 490px;
-    height: 350px;
-    margin: 5px;
-    display: flex;
-    font-weight: 700;
-    font-size: 24px;
-    line-height: 28px;
-    background-image: url(../img/delivery.jpg);
-    background-size: cover;
-    box-sizing: border-box;
-    padding-top: 10px;
-    padding-left: 40px;
-    color: white;
-    border-radius: 10px;
-}
-
-.mensaje div {
-    margin: 2px;
-}
-
-.rojo {
-    color: rgb(255, 1, 1);
-}
-
-.opciones {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    width: 490px;
-    height: 350px;
-    margin: 5px;
-    box-sizing: border-box;
-    padding-left: 20px;
     position: relative;
-    background-color: #fff;
-    border-radius: 10px;
-}
-
-.contenedor {
+    -webkit-clip-path: polygon(100% 0, 0 0, 0 100%, 100% 100%);
+            clip-path: polygon(100% 0, 0 0, 0 100%, 100% 100%);
     display: flex;
-    justify-content: space-between;
-    width: 400px;
-    flex-direction: row;
-    margin-top: 60px;
-    position: absolute;
-    top: 30px;
-    left: 10%;
-    font-weight: 700;
-    font-size: 16px;
-}
-
-.contenedor p {
-    font-size: 20px;
-}
-.contenedor img{
-    align-self: center;
-}
-
-footer {
-    background-color: #222222;
-    display: flex;
-    justify-content: space-between;
-    box-sizing: border-box;
-    padding: 30px;
+    justify-content: space-evenly;
     align-items: center;
-    margin-top: 2rem;
+    width: 100%;
+  }
 }
-
-footer a {
-    color: white;
-    text-decoration: none;
-    margin: 12px;
+body header nav input {
+  display: none;
 }
+body header nav ul {
+  position: absolute;
+  -webkit-clip-path: polygon(100% 0, 100% 0, 100% 100%, 100% 100%);
+          clip-path: polygon(100% 0, 100% 0, 100% 100%, 100% 100%);
+  transition: all 0.5s;
+  right: 10px;
+  text-align: end;
+  border-radius: 1rem;
+  padding: 10px;
+}
+body header nav #checkNav:checked + ul {
+  width: 100px;
+  -webkit-clip-path: polygon(100% 0, 0 0, 0 100%, 100% 100%);
+          clip-path: polygon(100% 0, 0 0, 0 100%, 100% 100%);
+  background: linear-gradient(#f00, rgb(1, 130, 1));
+  top: 250%;
+  right: 0;
+}
+body header nav #checkNav:checked + ul li:not(:first-child) {
+  margin-top: 10px;
+}
+@media (min-width: 425px) {
+  body header nav #checkNav:checked + ul {
+    top: 150%;
+  }
+}
+@media (min-width: 768px) {
+  body header div {
+    display: flex;
+    align-items: center;
+    height: 100px;
+  }
+}
+body main {
+  grid-column: 1/-1;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 90%;
+  margin: 2rem auto;
+}
+body main section.deliveri {
+  background-image: url(../img/delivery.svg);
+  background-size: cover;
+  background-position: center;
+  width: 400px;
+  height: calc(100vh - 400px);
+  padding: 1rem;
+  border-radius: 1rem;
+}
+body main section.deliveri h2 {
+  color: #f00;
+}
+body main section.deliveri h2 span {
+  color: #fff;
+}
+body main section.podio {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+  width: 400px;
+  height: calc(100vh - 400px);
+  padding: 1rem;
+}
+body main section.podio article {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 90%;
+  margin: 1rem auto;
+  height: auto;
+}
+body main section.podio article ol {
+  text-align: start;
+}
+body footer div {
+  text-align: end;
+}
+body footer div h2 span.verde {
+  color: rgb(1, 130, 1);
+}
+body footer div h2 span.rojo {
+  color: #f00;
+}/*# sourceMappingURL=style.css.map */
