--- a/css/style.css
+++ b/css/style.css
@@ -103,6 +103,9 @@ body main {
   width: 90%;
   margin: 2rem auto;
 }
+body main section {
+  margin: 1rem;
+}
 body main section.deliveri {
   background-image: url(../img/delivery.svg);
   background-size: cover;
