--- a/css/style.scss
+++ b/css/style.scss
@@ -92,6 +92,9 @@ body{
         flex-wrap: wrap;
         width: 90%;
         margin: 2rem auto;
+        section{
+            margin: 1rem;
+        }
         section.deliveri{
             background-image: url(../img/delivery.svg);
             background-size: cover;
